Fixed issue where all pages had a margin gap at the bottom.  Bulma issue

--- a/www/css/common.v2.css
+++ b/www/css/common.v2.css
@@ -17,6 +17,13 @@ html, body {
     border-bottom-width: 0 !important;
 }
 
+.columns {
+    /* Without this, the entire page has a gap at the bottom.  Discussed here:
+         https://stackoverflow.com/questions/55568335/100vh-flex-item-is-not-full-height
+    */
+    margin-top: 0 !important;
+}
+
 /* ---------------- */
 /* -= Typography =- */
 
